--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
     "expo": "~54.0.13",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
@@ -29,6 +32,8 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "express": "^5.1.0",
+    "genius-lyrics": "^4.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
